feat: Made a simple filtering, completed a little layout and with

--- a/src/App.scss
+++ b/src/App.scss
@@ -108,3 +108,13 @@ h6 {
     display: flex;
   }
 }
+
+.footer {
+  background: #2b8401;
+  .footer__inner {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+}
